package com.arges.file.proto; 

message CaptureData 
{
	required string  scannerdevicecode		=	1	[default = "default"];		//扫描器ID
	required string  wristmac				=	2	[default = "default"];		//手环mac
    required string  time					=	3	[default = "default"];		//时间戳	
	required string  actiontype				=	4	[default = "default"];		//联动动作类型
	required string  actiondescribe			=	5	[default = "default"];		//联动动作描述
	optional bytes   actiondata1			=	6	[default = "default"];		//临时图片
	optional bytes   actiondata2			=	7	[default = "default"];		//临时图片
	optional bytes   actiondata3			=	8	[default = "default"];		//临时图片
    optional bytes   actiondata				=	9	[default = "default"];	 	//匹配结果
	optional bytes   picture			    =	10	[default = "default"];	 	//证件照
	required string  picturetype			=	11	[default = "default"];		//证件照类型
	required string  actiondatatype         =   12  [default = "default"];      //网络图片类型
}

